fixed z-index issue with message container steaing events from console.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ body{
 	top:0;
 	margin:0;
 	padding:0;
+	z-index:5;
 }
 #command{
 	position:fixed;
